Fixed: Visting a page where the PM popup is disabled still marked the message as notified. Fixed: Incorrectly encoded url in final_uri argument to index.php Fixed: html_draw_bottom() was including the </body> tag in pm.php Fixed: IE7 text alignment in user agreement and html_*_msg functions.

--- a/forum/forums/default/style.css
+++ b/forum/forums/default/style.css
@@ -1141,6 +1141,7 @@ a {
     width: 500px;
     padding: 0px 10px 0px 10px;
     overflow: auto;
+    text-align: left;
 }
 
 .post_options {
