--- a/forum/styles/style.css
+++ b/forum/styles/style.css
@@ -1163,6 +1163,7 @@ a {
     width: 500px;
     padding: 0px 10px 0px 10px;
     overflow: auto;
+    text-align: left;
 }
 
 .post_options {
@@ -1203,10 +1204,12 @@ a {
     padding: 10px;
     margin: 10px 0px 10px 0px;
     max-width: 100%;
+    text-align: left;
 }
 
 .error_msg ul li {
     padding-bottom: 5px;
+    text-align: left;
 }
 
 .success_msg {
@@ -1217,6 +1220,7 @@ a {
     padding: 10px;
     margin: 10px 0px 10px 0px;
     max-width: 100%;
+    text-align: left;
 }
 
 .warning_msg {
@@ -1227,4 +1231,5 @@ a {
     padding: 10px;
     margin: 10px 0px 10px 0px;
     max-width: 100%;
+    text-align: left;
 }
